@@ -37,6 +37,7 @@ exempt of errors.
 - Marcelo Roberto Jimenez (mroberto)
 - Markus Strobl
 - Nektarios K. Papadopoulos (npapadop)
+- Nicholas Kraft
 - Oskar Liljeblad
 - Michael (oxygenic)
 - Paul Vixie
