@@ -40,15 +40,16 @@
 
 
 #include "UpnpGlobal.h" /* for */
+#include "UpnpInet.h"
 
 
+#include <ctype.h>
+#include <errno.h>
 #include <fcntl.h>
+#include <stdlib.h>
 #include <string.h>
 #include <sys/types.h>
 #include <time.h>
-#include <errno.h>
-#include <ctype.h>
-#include <stdlib.h>
 
 
 #ifdef WIN32
